# Tiramisu

./: .gitignore  CMakeLists.txt  TODO  asyncpageimageprovider.cpp  asyncpageimageprovider.h  backend.cpp  backend.h  book.cpp  book.h  bookpage.cpp  bookpage.h  helper.h  image.cpp  image.h  imageproc.cpp  imageproc.h  imagerunnable.cpp  imagerunnable.h  main.cpp  mainwindowreader.cpp  mainwindowreader.h  page.h  pagecontroller.cpp  pagecontroller.h  pageimageprovider.cpp  pageimageprovider.h  pagescene.cpp  pagescene.h  pageview.cpp  pageview.h  pageworker.cpp  pageworker.h  reader.pro  res.qrc  tiramisu.pro  tiramisu.pro.old  ui.qml  utils.h
android/: AndroidManifest.xml
include/: archive.h  archive_entry.h
src/: CMakeLists.txt  asyncpageimageprovider.cpp  asyncpageimageprovider.h  asyncsimpleimageprovider.cpp  asyncsimpleimageprovider.h  backend.cpp  backend.h  classicimagerunnable.cpp  classicimagerunnable.h  imagerunnable.cpp  imagerunnable.h  main.cpp  pagecontroller.cpp  pagecontroller.h  pagescheduler.cpp  pagescheduler.h  simpleimagerunnable.cpp  simpleimagerunnable.h
src/app/: CMakeLists.txt  app.pro  main.cpp  resources.qrc
src/app/android.qt5/: AndroidManifest.xml
src/app/android.qt5/assets/tiramisu/: qmldir
src/app/android.qt6/: AndroidManifest.xml
src/app/qml/: Main.qml  NavigationDrawer.qml  ReaderView.qml
src/libtiramisu/: CMakeLists.txt  cropdetectrunner.cpp  cropdetectrunner.h  cropscalerunner.cpp  cropscalerunner.h  pagepreloader.cpp  pagepreloader.h  pagescheduler.cpp  pagescheduler.h  threadpool.cpp  threadpool.h  tiramisu.cpp  tiramisu.h  tiramisu.pro  tiramisuc.cpp  tiramisuc.h
src/libtiramisu/parsers/: dummyparser.h  libarchiveparser.cpp  libarchiveparser.h  parser.cpp  parser.h  parseutils.cpp  parseutils.h  unarrparser.cpp  unarrparser.h
src/libtiramisu/runnables/: cropdetectrunnable.cpp  cropdetectrunnable.h  cropscalerunnable.cpp  cropscalerunnable.h
src/libtiramisu/utils/: crop.cpp  imageproc.cpp  imageproc.h  utils.cpp  utils.h
src/parsers/: dummyparser.h  libarchiveparser.cpp  libarchiveparser.h  parser.cpp  parser.h  parseutils.h  popplerparser.cpp  popplerparser.h  unarrparser.cpp  unarrparser.h
src/qquickitems/: pageitem.cpp  pageitem.h
src/qtquick/: CMakeLists.txt  backend.cpp  classicimagerunnable.cpp  classicimagerunnable.h  croprunnable.cpp  croprunnable.h  losslesscroprunnable.cpp  losslesscroprunnable.h  pageitem.cpp  pageitem.h  pagepreloader.cpp  pagepreloader.h  pagescheduler.cpp  pagescheduler.h  qmlplugin.cpp  qmlplugin.h  qtquick.pro  scalerunnable.cpp  scalerunnable.h  simpleimagerunnable.h
src/qtquick/parsers/: libarchiveparser.cpp  libarchiveparser.h  parser.cpp  parser.h  parseutils.cpp
src/qtquick/runnables/: classicimagerunnable.cpp  classicimagerunnable.h  cropdetectrunnable.cpp  cropdetectrunnable.h  croprunnable.cpp  croprunnable.h  cropscalerunnable.cpp  cropscalerunnable.h  losslesscroprunnable.cpp  losslesscroprunnable.h  scalerunnable.cpp  scalerunnable.h  simpleimagerunnable.cpp  simpleimagerunnable.h
src/qtquick/utils/: crop.cpp  crop.h  imageproc.cpp  imageproc.h  utils.cpp  utils.h
src/ui/: res.qrc  ui.qml
src/ui/components/: MiniViewComponent.qml  NavigationDrawerComponent.qml  ReaderComponent.qml  qmldir
src/utils/: imageproc.cpp  imageproc.h  utils.cpp  utils.h
